# serializer version: 1
# name: test_buttons[yna5x1][button.ozmo_950_relocate:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ozmo_950_relocate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relocate',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'relocate',
    'unique_id': 'E1234567890000000001_relocate',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_relocate:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Relocate',
    }),
    'context': <ANY>,
    'entity_id': 'button.ozmo_950_relocate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_filter_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ozmo_950_reset_filter_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset filter lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_filter',
    'unique_id': 'E1234567890000000001_reset_lifespan_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_filter_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Reset filter lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.ozmo_950_reset_filter_lifespan',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_main_brush_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ozmo_950_reset_main_brush_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset main brush lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_brush',
    'unique_id': 'E1234567890000000001_reset_lifespan_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_main_brush_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Reset main brush lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.ozmo_950_reset_main_brush_lifespan',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_side_brushes_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ozmo_950_reset_side_brushes_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset side brushes lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_side_brush',
    'unique_id': 'E1234567890000000001_reset_lifespan_side_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_side_brushes_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Reset side brushes lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.ozmo_950_reset_side_brushes_lifespan',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
